PC Configure Workstation

--- a/app/src/main/res/layout/activity_conf_p_c.xml
+++ b/app/src/main/res/layout/activity_conf_p_c.xml
@@ -36,7 +36,7 @@
                     android:layout_marginTop="176dp"
                     android:layout_marginEnd="68dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Rs. 0"
+                    android:text="@string/zero_total"
                     android:textColor="#E6DDDD"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -51,7 +51,7 @@
                     android:layout_marginBottom="47dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button9"
@@ -65,7 +65,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -82,7 +82,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Casing"
+                    android:hint="@string/select_casing_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -101,7 +101,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Cooling System"
+                    android:hint="@string/select_cooling_system_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -115,7 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="4dp"
-                    android:text="Power and Cooling"
+                    android:text="@string/power_and_cooling"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -140,7 +140,7 @@
                     android:layout_marginBottom="21dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button12"
@@ -157,7 +157,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Power Supply"
+                    android:hint="@string/select_power_supply_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -195,7 +195,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select M2. SSD"
+                    android:hint="@string/select_m2_ssd_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -211,7 +211,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button4"
@@ -228,7 +228,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Hard Drive"
+                    android:hint="@string/select_hard_drive_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -251,7 +251,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Hard Drive"
+                    android:text="@string/hard_drive"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -268,7 +268,7 @@
                     android:layout_marginBottom="43dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -285,7 +285,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select CPU"
+                    android:hint="@string/select_cpu_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -304,7 +304,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select RAM"
+                    android:hint="@string/select_ram_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -323,7 +323,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Motherboard"
+                    android:hint="@string/select_motherboard_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -342,7 +342,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select GPU"
+                    android:hint="@string/select_gpu_hint"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:textColorLink="#535353"
@@ -358,7 +358,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button8"
@@ -372,7 +372,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button7"
@@ -386,7 +386,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button6"
@@ -440,7 +440,7 @@
                     android:layout_marginBottom="45dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button5"
@@ -453,7 +453,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="4dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Core Component"
+                    android:text="@string/core_component"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -467,7 +467,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="13dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Casing"
+                    android:text="@string/casing"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -488,7 +488,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="108dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Configure Parts"
+                    android:text="@string/configure_parts"
                     android:textColor="#F6F0F0"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -504,7 +504,7 @@
                     android:layout_marginBottom="12dp"
                     android:background="@drawable/save1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Save"
+                    android:text="@string/save_btn"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -519,7 +519,7 @@
                     android:layout_marginBottom="12dp"
                     android:background="@drawable/reset1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="RESET"
+                    android:text="@string/reset_btn"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -549,7 +549,7 @@
                     android:layout_marginStart="64dp"
                     android:layout_marginTop="176dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Total"
+                    android:text="@string/total"
                     android:textColor="#E6DDDD"
                     android:textSize="24sp"
                     android:textStyle="bold"
