--- a/app/src/main/res/layout/activity_p_c_conf.xml
+++ b/app/src/main/res/layout/activity_p_c_conf.xml
@@ -45,7 +45,7 @@
         android:layout_marginBottom="96dp"
         android:background="@drawable/option3"
         android:fontFamily="@font/doppio_one"
-        android:text="Create\nPC"
+        android:text="@string/create_pcbtn"
         android:textColor="#AFAFAF"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -60,7 +60,7 @@
         android:layout_marginBottom="96dp"
         android:background="@drawable/option3"
         android:fontFamily="@font/doppio_one"
-        android:text="SAVED\nCONF."
+        android:text="@string/saved_confbtn"
         android:textColor="#AFAFAF"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:fontFamily="@font/doppio_one"
-        android:text="PC Configuration\nStation"
+        android:text="@string/pc_configuration_station"
         android:textAlignment="center"
         android:textColor="#DADADA"
         android:textSize="30sp"
