--- a/app/src/main/res/layout/activity_updateconfig.xml
+++ b/app/src/main/res/layout/activity_updateconfig.xml
@@ -36,7 +36,7 @@
                     android:layout_marginTop="176dp"
                     android:layout_marginEnd="68dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Rs. 268500"
+                    android:text="@string/total_price"
                     android:textColor="#E6DDDD"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -51,7 +51,7 @@
                     android:layout_marginBottom="47dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button9"
@@ -65,7 +65,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -82,7 +82,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Casing"
+                    android:hint="@string/casing_input"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:text="Cooler Master MB511 RGB"
@@ -102,7 +102,7 @@
                     android:elevation="32dp"
                     android:ems="10"
                     android:fontFamily="@font/doppio_one"
-                    android:hint="Select Cooling System"
+                    android:hint="@string/cooling_system_input"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
                     android:text="COOLER MASTER MASTERLIQUID ML240R RGB"
@@ -117,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="4dp"
-                    android:text="Power and Cooling"
+                    android:text="@string/power_and_cooling"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -142,7 +142,7 @@
                     android:layout_marginBottom="21dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button12"
@@ -215,7 +215,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button4"
@@ -256,7 +256,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="3dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Hard Drive"
+                    android:text="@string/hard_drive"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -273,7 +273,7 @@
                     android:layout_marginBottom="43dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -313,7 +313,7 @@
                     android:hint="Select RAM"
                     android:inputType="textPersonName"
                     android:paddingLeft="10dp"
-                    android:text="16GB 2666 DDR4"
+                    android:text="@string/ram"
                     android:textColorLink="#535353"
                     android:textCursorDrawable="?android:attr/textCursorDrawable"
                     app:layout_constraintEnd_toStartOf="@+id/button8"
@@ -367,7 +367,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button8"
@@ -381,7 +381,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button7"
@@ -395,7 +395,7 @@
                     android:layout_marginBottom="10dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button6"
@@ -449,7 +449,7 @@
                     android:layout_marginBottom="45dp"
                     android:background="@drawable/btn1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="ADD"
+                    android:text="@string/addbtn_1"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/button5"
@@ -462,7 +462,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginBottom="4dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Core Component"
+                    android:text="@string/core_component"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -476,7 +476,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="13dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Casing"
+                    android:text="@string/casing"
                     android:textColor="#B1ACAC"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -497,7 +497,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="108dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Configure Parts"
+                    android:text="@string/configure_parts"
                     android:textColor="#F6F0F0"
                     android:textSize="30sp"
                     android:textStyle="bold"
@@ -513,7 +513,7 @@
                     android:layout_marginBottom="12dp"
                     android:background="@drawable/save1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Save"
+                    android:text="@string/savebtn_text"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -528,7 +528,7 @@
                     android:layout_marginBottom="12dp"
                     android:background="@drawable/reset1"
                     android:fontFamily="@font/doppio_one"
-                    android:text="RESET"
+                    android:text="@string/resetbtn_text"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -558,7 +558,7 @@
                     android:layout_marginStart="64dp"
                     android:layout_marginTop="176dp"
                     android:fontFamily="@font/doppio_one"
-                    android:text="Total"
+                    android:text="@string/total"
                     android:textColor="#E6DDDD"
                     android:textSize="24sp"
                     android:textStyle="bold"
