--- a/app/src/main/res/layout/activity_cpuselection.xml
+++ b/app/src/main/res/layout/activity_cpuselection.xml
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
         android:fontFamily="@font/doppio_one"
-        android:text="Prosessors"
+        android:text="@string/prosessors"
         android:textColor="#F6F0F0"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -76,10 +76,10 @@
                         android:id="@+id/textView1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="230dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="RS. 162000"
+                        android:text="@string/proc_price1"
                         android:textSize="22sp"
                         android:textStyle="bold" />
 
@@ -91,7 +91,7 @@
                         android:layout_marginTop="180dp"
                         android:background="@drawable/selectbtn"
                         android:fontFamily="@font/doppio_one"
-                        android:text="SELECT"
+                        android:text="@string/selectbtn"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -100,10 +100,10 @@
                         android:id="@+id/textView2"
                         android:layout_width="242dp"
                         android:layout_height="207dp"
-                        android:layout_marginLeft="160dp"
+                        android:layout_marginStart="160dp"
                         android:layout_marginTop="60dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="CPU Cores : 16\nThreads : 32\nBase Clock : 3.5GHz\nMax Boost Clock : 4.7GHz\nL1 Cache  : 1MB\nL2 Cache : 8MB\nL3 Cache : 64MB\nWarranty : 3Yrs"
+                        android:text="@string/pros_detail1"
                         android:textSize="19sp"
                         android:textStyle="bold" />
 
@@ -130,7 +130,7 @@
                         android:layout_marginLeft="90dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="AMD RYZEN™ 9 3950X"
+                        android:text="@string/pros_name1"
                         android:textSize="22sp"
                         android:textStyle="bold" />
 
@@ -155,10 +155,10 @@
                         android:id="@+id/textView4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="230dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="RS. 125000"
+                        android:text="@string/proc_price2"
                         android:textSize="22sp"
                         android:textStyle="bold" />
 
@@ -170,7 +170,7 @@
                         android:layout_marginTop="180dp"
                         android:background="@drawable/selectbtn"
                         android:fontFamily="@font/doppio_one"
-                        android:text="SELECT"
+                        android:text="@string/selectbtn"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -179,10 +179,10 @@
                         android:id="@+id/textView18"
                         android:layout_width="242dp"
                         android:layout_height="207dp"
-                        android:layout_marginLeft="160dp"
+                        android:layout_marginStart="160dp"
                         android:layout_marginTop="60dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="CPU Cores : 10\nThreads : 20\nBase Clock : 3.7GHz\nMax Boost Clock : 5.3GHz\nL1 Cache  : 1MB\nL2 Cache : 8MB\nL3 Cache : 64MB\nWarranty : 3Yrs"
+                        android:text="@string/pros_detail2"
                         android:textSize="19sp"
                         android:textStyle="bold" />
 
@@ -209,7 +209,7 @@
                         android:layout_marginLeft="90dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="INTEL® CORE™ I9-10900K"
+                        android:text="@string/pros_name2"
                         android:textSize="22sp"
                         android:textStyle="bold" />
 
@@ -233,7 +233,7 @@
                         android:layout_marginLeft="20dp"
                         android:layout_marginTop="230dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="RS. 86000"
+                        android:text="@string/proc_price4"
                         android:textSize="22sp"
                         android:textStyle="bold" />
 
@@ -245,7 +245,7 @@
                         android:layout_marginTop="180dp"
                         android:background="@drawable/selectbtn"
                         android:fontFamily="@font/doppio_one"
-                        android:text="SELECT"
+                        android:text="@string/selectbtn"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -257,7 +257,7 @@
                         android:layout_marginLeft="160dp"
                         android:layout_marginTop="60dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="CPU Cores : 8\nThreads : 16\nBase Clock : 3.8GHz\nMax Boost Clock : 5.1GHz\nL1 Cache  : 1MB\nL2 Cache : 8MB\nL3 Cache : 64MB\nWarranty : 3Yrs"
+                        android:text="@string/pros_details3"
                         android:textSize="19sp"
                         android:textStyle="bold" />
 
@@ -284,7 +284,7 @@
                         android:layout_marginLeft="90dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="INTEL® CORE™ I7-10700K"
+                        android:text="@string/pros_name3"
                         android:textSize="22sp"
                         android:textStyle="bold" />
                 </androidx.cardview.widget.CardView>
@@ -302,10 +302,10 @@
                         android:id="@+id/textView24"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginStart="20dp"
                         android:layout_marginTop="230dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="RS. 100000"
+                        android:text="@string/proc_price3"
                         android:textSize="22sp"
                         android:textStyle="bold" />
 
@@ -317,7 +317,7 @@
                         android:layout_marginTop="180dp"
                         android:background="@drawable/selectbtn"
                         android:fontFamily="@font/doppio_one"
-                        android:text="SELECT"
+                        android:text="@string/selectbtn"
                         android:textColor="#FFFFFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -329,7 +329,7 @@
                         android:layout_marginLeft="160dp"
                         android:layout_marginTop="60dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="CPU Cores : 12\nThreads : 24\nBase Clock : 3.8GHz\nMax Boost Clock : 4.6GHz\nL1 Cache  : 1MB\nL2 Cache : 6MB\nL3 Cache : 64MB\nWarranty : 3Yrs"
+                        android:text="@string/pros_detail4"
                         android:textSize="19sp"
                         android:textStyle="bold" />
 
@@ -356,7 +356,7 @@
                         android:layout_marginLeft="90dp"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/doppio_one"
-                        android:text="AMD RYZEN™ 9 3900X"
+                        android:text="@string/pros_name4"
                         android:textSize="22sp"
                         android:textStyle="bold" />
                 </androidx.cardview.widget.CardView>
